--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
+.Weather .card-1 {
+  padding: 10px;
+}
+.Weather .card-2 {
+  padding: 10px;
+  position: relative;
+  right: -40px;
+}
+.Weather .card-icon {
+  font-size: 45px;
+}
+
+.Weather .weather-app-wrapper {
+  max-width: 600px;
+  margin: 20px auto;
+}
+.Weather .card-app {
+  border: 1px solid #9aa0a5;
+  padding: 15px;
+  max-width: 600px;
+  margin: 20px auto;
+  border-radius: 10px;
+  background-color: rgba(192, 192, 192, 0.7);
+}
+.Weather .row-app {
   text-align: center;
+  padding: 20px 0 20px 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Weather .units {
+  position: relative;
+  top: -15px;
+  font-size: 15px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Weather .card-temp {
+  font-size: 30px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Weather .weather-link {
+  padding: 0;
+  margin: 0 auto;
 }
-
-.App-link {
-  color: #61dafb;
+.Weather .weather-forecast {
+  position: relative;
+  left: 60px;
+  top: 5px;
+  padding: 0px;
+  margin: -40px;
 }
+.Weather .weather-forecast-icon {
+  position: relative;
+  right: 60px;
+  top: 38px;
+  font-size: 35px;
+}
+.Weather .forecast-temperature-min {
+  opacity: 0.5;
+  position: relative;
+}
+.Weather .btn-secondary {
+  background: #e86e4d;
+  font-weight: bold;
+  font-size: 15px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: none;
+  height: 40px;
+  opacity: 0.9;
+}
+.Weather .enter {
+  background: #f9f7fe;
+  border: none;
+  padding: 15px 20px;
+  display: inline-block;
+  border-radius: 6px;
+  font-size: 16px;
+  height: 40px;
+  line-height: 20px;
 }
