--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 50px 50px;
+  background-image: url("https://images.unsplash.com/photo-1500491460312-c32fc2dbc751?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80");
+  background-size: cover;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  font-size: 38px;
+  font-weight: 500;
+  padding-bottom: 0px;
+  padding-top: 20px;
+}
+h2 {
+  font-size: 25px;
+  line-height: 50px;
+}
+h3 {
+  font-size: 30px;
+}
+h4 {
+  font-size: 18px;
+  color: rgb(91, 86, 102);
+}
+p {
+  color: rgb(91, 86, 102);
+  padding-top: 20px;
+  padding-bottom: 30px;
+}
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  left: -39px;
+  color: rgb(101, 97, 109);
 }
